tests/Compilation/positive/test013.juvix
-- functions returning functions with variable capture
module test013;

import Stdlib.Prelude open;

f : Nat → Nat → Nat
  | x :=
    ite
      (x == 6)
      λ{_ := 0}
      (ite (x == 5) λ{_ := 1} (ite (x == 10) λ{_ := λ{x := x} 2} λ{x := x}));

main : IO :=
  printNatLn (f 5 6)
    >>> printNatLn (f 6 5)
    >>> printNatLn (f 10 5)
    >>> printNatLn (f 11 5);
